# dicey

./: .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  setup.py
.gitlab/scripts/: copyright_updater.py
bindings/python/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  test.py
bindings/python/dicey/: __init__.py
bindings/python/dicey/core/: __init__.pxd  __init__.py  builders.pxd  builders.pyx  errors.pxd  errors.pyx  packet.pxd  packet.pyx  type.pxd  types.pyx  value.pxd  value.pyx  version.pxd
bindings/python/dicey/ipc/: __init__.py  address.pxd  address.pyx  builtins.pxd  client.pxd  client.pyx  server.pxd.bak  sigparse.pyx  traits.pxd
bindings/python/samples/: sval_bench.py  test.py
bindings/rust/: .gitignore  Cargo.toml  README.md
bindings/rust/dicey/: Cargo.toml
bindings/rust/dicey-sys/: Cargo.toml  build.rs
cmake/: FindUV.cmake  dicey-config.cmake.in  dicey.pc.in  dicey_config.h.in
dicey/: __init__.py  errors.pxd  errors.pyx  packet.pxd  packet.pyx  type.pxd  types.py  value.pxd  value.pyx  version.pxd
dicey/core/: __init__.py  builders.pxd  builders.pyx  packet.pxd  packet.pyx  type.pxd  types.pyx  value.pxd  value.pyx
dicey/ipc/: __init__.py  address.pxd
docs/: Doxyfile.in
docs/source/: conf.py  index.rst
docs/source/api/: class_view_hierarchy.rst.include  define_type_8h_1a55dd121caa4e1fba833496a7687d41ca.rst  define_type_8h_1abf46421417400f161cead559f49f5438.rst  define_version_8h_1a18873e4de40f4826c51331804cde591e.rst  define_version_8h_1a3d5dcc61e0e07e7c8291173c0087d692.rst  define_version_8h_1a3ef90f5ed7fa21042f9bbd167c9f30ea.rst  define_version_8h_1a7792902d2f55e2b0a8a954818b9496f6.rst  define_version_8h_1aba45448852213b3026f05127eb297f2b.rst  define_version_8h_1ac9126d2ff94ba670354b2cb69cffd0e9.rst  define_version_8h_1add9e817f6ead15e565dafc3adca4180b.rst  define_version_8h_1adfc4579e1b2357393670ddf54eb4d06b.rst  define_version_8h_1afcdde1941372d753a32feed3ea102b8f.rst  dir__home_marco_Workspace_dicey_include.rst  dir__home_marco_Workspace_dicey_include_dicey.rst  dir__home_marco_Workspace_dicey_include_dicey_core.rst  dir__home_marco_Workspace_dicey_include_dicey_ipc.rst  enum_client_8h_1acee9f3ebcd3783bd8603193270128692.rst  enum_errors_8h_1aad536a5d28307ab72e73a41559622ea6.rst  enum_hashtable_8h_1ad92c88c1ca90a2b43f9c5694d4ce064b.rst  enum_packet_8h_1a54f670c8a4407791a2d6c3c2822dea11.rst  enum_packet_8h_1a57f752032a63fdab03dd803ae88cc10d.rst  enum_packet_8h_1a799a5266a9e97650cbf7dcf4010ae805.rst  enum_registry_8h_1a721340222d65d75ad946d012052e36ab.rst  enum_traits_8h_1a78074aeddc9bdd47218699008d1bf294.rst  enum_type_8h_1a1e363cd131d17da43c167ede87fcaa3c.rst  enum_typedescr_8h_1a533fb0da5821e67bc212b38168ca0d9a.rst  file__home_marco_Workspace_dicey_include_dicey_core_builders.h.rst  file__home_marco_Workspace_dicey_include_dicey_core_data-info.h.rst  file__home_marco_Workspace_dicey_include_dicey_core_errors.h.rst  file__home_marco_Workspace_dicey_include_dicey_core_hashset.h.rst  file__home_marco_Workspace_dicey_include_dicey_core_hashtable.h.rst  file__home_marco_Workspace_dicey_include_dicey_core_packet.h.rst  file__home_marco_Workspace_dicey_include_dicey_core_type.h.rst  file__home_marco_Workspace_dicey_include_dicey_core_typedescr.h.rst  file__home_marco_Workspace_dicey_include_dicey_core_value.h.rst  file__home_marco_Workspace_dicey_include_dicey_core_version.h.rst  file__home_marco_Workspace_dicey_include_dicey_core_views.h.rst  file__home_marco_Workspace_dicey_include_dicey_dicey.h.rst  file__home_marco_Workspace_dicey_include_dicey_ipc_address.h.rst  file__home_marco_Workspace_dicey_include_dicey_ipc_client.h.rst  (+262 more)
docs/source/dtf/: dtf.rst  index.rst
docs/source/intro/: overview.rst
include/dicey/: asserts.h  builders.h  dicey.h  errors.h  packet.h  type.h  types.h  value.h  version.h  views.h
include/dicey/core/: builders.h  data-info.h  errors.h  hashset.h  hashtable.h  message.h  packet.h  type.h  typedescr.h  value.h  version.h  views.h
include/dicey/internal/: data-info.h  views.h
include/dicey/ipc/: address.h  builtins.h  client.h  plugins.h  registry.h  request.h  server-api.h  server.h  traits.h
samples/: CMakeLists.txt  base64.c  client.c  dummy_plugin.c  dummy_plugin.h  dump.c  inspect.c  load.c  loadread.c  randpkt.c  server.c  subtest.c  sval.c  sval.h  timer.h
samples/fuzz/: fuzz.c
samples/util/: CMakeLists.txt
samples/util/include/util/: base64.h  dumper.h  getopt.h  packet-dump.h  packet-json.h  packet-xml.h  random.h  strext.h  uuid.h  uvtools.h
samples/util/src/: base64.c  dumper.c  getopt.c  packet-dump.c  packet-from-json.c  packet-from-xml.c  packet-gen.c  uuid.c  uvtools.c
schemas/: example.xml  object.xsd  packet.xml  packet.xsd  trait.xsd
src/: builders.c  dtf-to.h  dtf-value.c  dtf-value.h  dtf.c  dtf.h  errors.c  packet-args.c  packet-args.h  packet.c  trace.c  typedescr.c  typedescr.h  types.c  unsafe.c  unsafe.h  util.c  util.h  value.c  version.c  view-ops.c  view-ops.h  views.c
src/dtf/: dtf.h  payload.c  payload.h  to.h  value-probe.c  value-write.c  value.c  value.h  writer.c  writer.h
src/ipc/: address.c  chunk.c  chunk.h  client-data.c  client-data.h  client.c  elemdescr.c  elemdescr.h  pending-list.c  pending-list.h  plugin-common.c  plugin-common.h  plugin-macros.h  queue.c  queue.h  server.c  task-io.c  task-io.h  task-list.c  task-list.h  task-loop.c  task-loop.h  typedescr.c  typedescr.h  uvtools.c  uvtools.h
src/ipc/client/: client-internal.h  client.c  plugins.c  waiting-list.c  waiting-list.h
src/ipc/server/: client-data.c  client-data.h  introspection.c  introspection.h  pending-reqs.c  pending-reqs.h  plugins-internal.h  (+17 more)
src/sup/: array.inc  asprintf.c  asprintf.h  assume.h  fs.c  fs.h  hashset.c  hashtable.c  hashtable.h  trace.c  trace.h  unsafe.c  unsafe.h  util.c  util.h  uvtools.c  uvtools.h  view-ops.c  view-ops.h
src/wirefmt/: builders.c  message.c  packet-args.c  packet-args.h  packet.c  typedescr.c  typedescr.h  uuid.c  value-internal.h  value-validate.c  value.c
(+37 files in other folders)
